--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,26 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin BtnHover {
+  .singUp__form--button--arrow {
+    transition: fill 0.5s ;
+    fill: $colorWhite;
+  }
+}
+
+@mixin BtnTicketsHover {
+  .header__button--tickets,
+  .header__button--arrow--img {
+    color: $colorWhite;
+    fill: $colorBlack;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
   }
 }
