--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/vars";
+@import "./utils/extends";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/singUp.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/mainMenu.scss";
+@import "./blocks/grid.scss";
