--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,4 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%Montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
 }
