--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$color-main: #0f0e08;
+$color-gray: #687480;
+$color-dark: #4e4e4e;
+$color-green: #1a5a4c;
+$color-orange: #f14a27;
+$color-white: #fff;
+$main-size: 14px;
+$subtitle-size: 36px;
+$title-size: 48px;
