--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
+h1,
+h2,
+h3,
+h4,
+p,
+a,
+ul,
+li,
+body,
+button {
+  display: block;
+  margin: 0;
+  padding: 0;
 }
+
+@import "blocks.scss";
