--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin header {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
 @mixin grid (
   $tablet-start,
   $tablet-end,
