--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,3 +7,13 @@ $color-white: #fff;
 $main-size: 14px;
 $subtitle-size: 36px;
 $title-size: 48px;
+$font-main: 'IBM Plex Sans', Montserrat, sans-serif;
+$font-major: Montserrat, 'IBM Plex Sans', sans-serif;
+$weight-bold: 700;
+$weight-main: 400;
+$weight-light: 300;
+$weight-medium: 500;
+$weight-major: 600;
+$lineheight-smaller: 100%;
+$lineheight-medium: 120%;
+$lineheight-bigger: 150%;
