--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,7 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 
   &__body--with-menu {
     overflow: hidden;
