--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -24,7 +24,7 @@
 
     display: block;
     width: 50px;
-    height: 49px;
+    height: 100%;
     content: "";
 
     background-image: url(/images/icons/buttonArrow.svg);
@@ -44,7 +44,7 @@
 
     &::after {
       width: 70px;
-      height: 69px;
+      height: 100%;
     }
   }
 
@@ -58,7 +58,7 @@
 
     &::after {
       width: 70px;
-      height: 69px;
+      height: 100%;
     }
   }
 }
