--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,38 +1,18 @@
 .current-events {
 
   &__article {
-
-    // &:not(:first-child) {
-    //   margin-top: 60px;
-
-    //   @include onTablet {
-    //     margin-top: 64px;
-    //   }
-
-    //   @include onDesktop {
-    //     margin-top: 104px;
-    //   }
-    // }
+    align-items: center;
 
     @include onTablet {
       grid-column: 1 / 7;
-
-      display: grid;
-      grid-template-columns: repeat(6, 90px);
-      column-gap: 30px;
     }
-
+  
     @include onDesktop {
       grid-column: 1 / 13;
-
-      display: grid;
-      grid-template-columns: repeat(12, 70px);
-      column-gap: 30px;
-      align-items: center;
     }
   }
 
-  &__article-next {
+  &__article:not(:first-of-type) {
     margin-top: 60px;
 
     @include onTablet {
@@ -44,19 +24,28 @@
     }
   }
 
+  &__article-description {
+    
+    @include onTablet {
+      grid-column: 1 / 5;
+    }
+
+    @include onDesktop {
+      grid-column: 9 / 13;
+    }
+  }
+
   &__article-image {
     width: 100%;
     height: 210px;
 
     @include onTablet {
       grid-column: 1 / 7;
-
       height: 520px;
     }
 
     @include onDesktop {
       grid-column: 1 / 8;
-
       height: 520px;
     }
   }
@@ -65,19 +54,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     margin-top: 16px;
 
     @include onTablet {
-      grid-column: 1 / 4;
-
-      margin-top: 44px;
+      justify-content: flex-start;
+      gap: 28px;
+      margin-top: 40px;
     }
 
     @include onDesktop {
-      grid-column: 9 / 12;
-
-      margin-top: 0;
+      justify-content: flex-start;
+      gap: 24px;
     }
   }
 
@@ -86,9 +73,17 @@
     font-size: 16px;
     line-height: 100%;
 
+    color: $colorGray;
+    
     text-transform: uppercase;
 
-    color: $colorGray;
+    @include onTablet {
+      font-size: 14px;
+    }
+
+    @include onDesktop {
+      font-size: 14px;
+    }
   }
 
   &__article-additional-date {
@@ -97,9 +92,17 @@
     line-height: 150%;
 
     color: $colorGreen;
+
+    @include onTablet {
+      font-size: 14px;
+    }
+
+    @include onDesktop {
+      font-size: 14px;
+    }
   }
 
-  &__article-title {
+  &__article-description-title {
     margin-top: 10px;
     position: relative;
 
@@ -107,17 +110,13 @@
     font-size: 28px;
     line-height: 100%;
 
-    color: $colorBlackSecond;
-
     @include onTablet {
-      grid-column: 1 / 5;
       margin-top: 30px;
 
       font-size: 36px;
     }
 
     @include onDesktop {
-      grid-column: 9 / 13;
       margin-top: 30px;
 
       font-size: 36px;
@@ -125,15 +124,15 @@
 
     &::after {
       position: absolute;
-      top: 50%;
       right: 0;
+      top: 50%;
+      transform: translateY(-50%);
 
       display: inline-block;
       content: "";
       width: 10px;
       height: 10px;
 
-      transform: translateY(-50%);
       background-color: $colorOrange;
 
       @include onTablet {
@@ -152,24 +151,20 @@
     }
   }
 
-  &__article-text {
+  &__article-description-text {
     margin-top: 10px;
 
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
 
-    color: $secondaryColor;
+    color: $colorSecondary;
 
     @include onTablet {
-      grid-column: 1 / 5;
-
       margin-top: 15px;
     }
 
     @include onDesktop {
-      grid-column: 9 / 13;
-
       margin-top: 15px;
     }
   }
