--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -57,7 +57,7 @@
       grid-column: 2 / 3;
       margin-bottom: 40px;
       width: 220px;
-      font-size: $subtitle-size;
+      font-size: $size-subtitle;
       line-height: $lineheight-smaller;
     }
 
@@ -116,7 +116,6 @@
     padding: 16px;
     width: calc(100% - 50px);
     height: 50px;
-    font-family: $font-main;
     font-size: 16px;
     line-height: $lineheight-smaller;
     font-weight: $weight-medium;
@@ -158,9 +157,8 @@
       top: calc(50vw - 55px);
       display: flex;
       align-items: center;
-      font-family: $font-main;
       font-weight: $weight-bold;
-      font-size: $main-size;
+      font-size: $size-main;
       line-height: $lineheight-smaller;
       color: $color-gray;
       transform: rotate(-90deg);
