--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,14 +1,14 @@
+$font-main: 'IBM Plex Sans', Montserrat, sans-serif;
+$font-major: Montserrat, 'IBM Plex Sans', sans-serif;
 $color-main: #0f0e08;
 $color-gray: #687480;
 $color-dark: #4e4e4e;
 $color-green: #1a5a4c;
 $color-orange: #f14a27;
 $color-white: #fff;
-$main-size: 14px;
-$subtitle-size: 36px;
-$title-size: 48px;
-$font-main: 'IBM Plex Sans', Montserrat, sans-serif;
-$font-major: Montserrat, 'IBM Plex Sans', sans-serif;
+$size-main: 14px;
+$size-subtitle: 36px;
+$size-title: 48px;
 $weight-bold: 700;
 $weight-main: 400;
 $weight-light: 300;
