--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   height: 100vh;
   transform: translateX(-100%);
+  transition: transform 0.3s;
 
   &:target {
     transform: translateX(0);
