--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,10 @@
 .page {
   position: relative;
 
+  &--with-nav {
+    overflow: hidden;
+  }
+
   &__header {
     margin-bottom: 70px;
     padding: 9px 20px 0;
