--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -4,7 +4,7 @@
   height: 210px;
 
   background-image: url(/images/LectureSection.jpg);
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
 
