add main, footer

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,14 @@
 .header {
+  margin-bottom: 70px;
+
   @include tablet {
     height: 384px;
+    margin-bottom: 88px;
   }
 
   @include desktop {
     height: 655px;
+    margin-bottom: 200px;
   }
 
   &__content {
@@ -35,7 +39,6 @@
   }
 
   &__title {
-    text-align: center;
     margin: 20px auto;
 
     @include tablet {
@@ -53,7 +56,6 @@
     @include mobile {
       order: -1;
     }
-
   }
 
   &__image {
@@ -107,9 +109,9 @@
     }
   }
 
-  &__events {
+  &__palka {
     display: none;
-    @extend %events;
+    @extend %palka;
     font-weight: 700;
 
     @include desktop {
