--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -77,16 +77,17 @@
       font-size: rem(22px);
       line-height: rem(22px);
     }
+    
+    border-bottom: 0 solid $color-white;
+    transition: all 0.2s linear;
 
     &:hover {
-      color: $color-white-05;
+      border-width: 2px;
     }
   }
 
   &__schedule {
-    font-weight: 400;
-    font-size: rem(14px);
-    line-height: rem(21px);
+    @extend %schedule;
     margin-top: 24px;
     align-self: center;
 
