--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,8 +1,15 @@
 .page {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  color: $text-color-fe8;
+
   max-width: 1280px;
+  min-width: 320px;
   margin: 0 auto;
   font-size: $page-font-size;
   transition: all 1s;
+
+  scroll-behavior: smooth;
 
   &__body {
     transition: all 1s;
