--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,10 +1,10 @@
 %h1 {
-  font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  font-style: normal;
   font-size: rem(45px);
   line-height: rem(45px);
   text-transform: uppercase;
+  text-align: center;
+  color: $text-color-fff;
 
   @include tablet {
     font-size: rem(54px);
@@ -17,10 +17,44 @@
   }
 }
 
-%events {
+%palka {
   font-weight: 500;
   font-size: rem(14px);
   line-height: rem(14px);
   color: #687480;
   text-transform: uppercase;
+}
+
+%h2 {
+  font-weight: 700;
+  font-size: rem(36px);
+  line-height: 100%;
+  text-align: center;
+
+  @include tablet {
+    font-size: rem(48px);
+  }
+}
+
+%h3 {
+  font-weight: 400;
+  font-size: rem(26px);
+  line-height: 100%;
+
+  @include tablet {
+    font-size: rem(36px);
+  }
+}
+
+%p {
+  font-family: "Plex", sans-serif;
+  font-weight: 300;
+  font-size: rem(16px);
+  line-height: 150%;
+}
+
+%schedule {
+  font-weight: 400;
+  font-size: rem(14px);
+  line-height: rem(21px);
 }
