--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,5 +3,8 @@ $text-color-fe8: rgb(15, 14, 8);
 $color-green: rgb(26, 90, 76);
 $color-white: rgb(255, 255, 255);
 $color-white-05: rgba(255, 255, 255, 0.5);
+$color-silver: rgb(104, 116, 128);
+
+$color-orange: rgb(241, 74, 39);
 
 $page-font-size: 16px;
