--- a/src/styles/blocks/mini-blocks/icon.scss
+++ b/src/styles/blocks/mini-blocks/icon.scss
@@ -3,14 +3,14 @@
   display: none;
   width: 18px;
   height: 12px;
-  margin: 33px 3px 0;
+  margin: 33px 0;
+  padding: 15px;
   background-image: url("../images/icons/menu.svg");
-  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 
   transition: all 0.5s;
-  
+
   &--menu {
     background-image: url("../images/icons/menu.svg");
 
