--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -12,6 +12,10 @@
 
     &--item {
       list-style: none;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 150%;
+      color: $colorBlack;
 
       &-contact {
         text-decoration: none;
