--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,13 +1,16 @@
 .gallery {
   margin-bottom: 129px;
   position: relative;
+  padding: 0 20px;
 
   @include onTablet {
     margin-bottom: 133px;
+    padding: 0 34px;
   }
 
   @include onDesktop {
     margin-bottom: 170px;
+    padding: 0 55px;
   }
 
   &__title {
@@ -46,8 +49,10 @@
 
     &--img {
       width: 100%;
+      max-height: 600px;
       margin-bottom: 30px;
       transition: scale 0.7s;
+      object-fit: cover;
 
       &:hover {
         scale: 1.1;
