--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -47,9 +47,15 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 24px;
+      padding: 0 21px;
+
+      @include onTablet {
+        padding: 0 55px;
+      }
 
       @include onDesktop {
         justify-content: start;
+        padding: 0 100px;
       }
 
       &-name {
@@ -81,6 +87,11 @@
       @include onTablet {
         text-align: left;
         font-size: 36px;
+        padding: 0 55px;
+      }
+
+      @include onDesktop {
+        padding: 0 100px;
       }
     }
   }
