--- a/src/styles/blocks/singUp.scss
+++ b/src/styles/blocks/singUp.scss
@@ -49,23 +49,26 @@
       box-sizing: border-box;
       width: 230px;
       height: 50px;
+      padding: 18px 24px ;
+      @extend %Montserrat;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 100%;
+      color: $colorBlack;
 
       @include onTablet {
         width: 374px;
         height: 70px;
+        padding: 28px 24px;
       }
 
       @include onDesktop {
         width: 470px;
+        padding: 28px 32px;
       }
 
       &::placeholder {
-        @extend %Montserrat;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 100%;
         color: #687480;
-        padding-left: 24px;
       }
     }
 
