--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,7 +1,7 @@
 .slider {
   position: relative;
   width: 280px;
-  max-width: 800px;
+  max-width: 720px;
   margin: 0 auto;
   overflow: hidden;
 
@@ -21,10 +21,11 @@
     }
     
     &--img {
-      width: 23%;
-      margin-right: 16px;
-
+      width: 25%;
+      object-fit: cover;
+      
       @include onTablet {
+        min-width: 340px;
         margin-right: 20px;
       }
     }
