footer was added

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -40,7 +40,7 @@
 
   &:target {
     transform: translateY(0);
-    
+
     &::after {
       display: block;
     }
@@ -107,8 +107,9 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 0;
     margin-left: 28px;
+
+    height: min-content;
 
     @include onDesktop {
       margin-left: 102px;
