--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,4 @@
 @import "./blocks/current-events.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
