forgot to add copyright

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -268,4 +268,47 @@
   &__nav-item:nth-last-child(-n + 2) {
     margin-top: 20px;
   }
+
+  &__copyright {
+    margin-top: 80px;
+    margin-bottom: 56px;
+
+    @include onTablet {
+      grid-column: 1 / 7;
+      margin-top: 120px;
+      margin-bottom: 36px;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 13;
+      margin-top: 88px;
+      margin-bottom: 36px;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+
+  &__copyright-text {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 17px;
+
+    text-align: center;
+
+    color: $colorBlackSecond;
+
+    @include onTablet {
+      text-align: left;
+    }
+
+    @include onDesktop {
+      text-align: left;
+    }
+  }
 }
