--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -45,6 +45,8 @@
 
     @include onDesktop {
       display: block;
+      max-width: 1400px;
+      margin: 0 auto;
     }
 
     &--img {
@@ -53,6 +55,7 @@
       margin-bottom: 30px;
       transition: scale 0.7s;
       object-fit: cover;
+      object-position: top;
 
       &:hover {
         scale: 1.1;
