--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
-@import "typography";
+@import "utils/grid";
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+@import "blocks/button";
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/top-action";
+@import "blocks/menu";
+@import "blocks/title";
+@import "blocks/current-events";
+@import "blocks/lecture";
+@import "blocks/follow";
+@import "blocks/footer";
+@import "blocks/swiper-gallery";
+@import "blocks/gallery";
