--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,10 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+%text-menu {
+  list-style: none;
+  font-family: "IBM", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+}
