--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$size-icon: 24px;
+$accent-text-color: #0f0e08;
+$black-color: #000;
+$green-color: #1a5a4c;
+$events-type-color: #687480;
+$text-description-color: #4e4e4e;
+$aftel-elements-color: #f14a27;
+$text-on-dark: #fff;
+$logo-size: 30px;
+$link-height: 52px;
