--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,11 +1,26 @@
-$height: 543px;
+$height: 420px;
+$heightTablet: 543px;
 
 .swiper {
   height: calc(#{$height} + 40px);
 
+  @include onTablet() {
+    height: calc(#{$heightTablet} + 40px);
+  }
+
+  @include onDesktop() {
+    display: none;
+  }
+
   &__image {
+    width: 100%;
     height: $height;
+    object-position: top;
     object-fit: cover;
+
+    @include onTablet() {
+      height: $heightTablet;
+    }
   }
 }
 
