--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -20,6 +20,19 @@
       align-items: center;
       gap: 130px;
     }
+
+    &--highlighted-event {
+      position: relative;
+
+      @include onDesktop() {
+        display: block  ;
+        align-items: center;
+        gap: 130px;
+        width: 100vw;
+        right: 0;
+      }
+
+    }
   }
 
   &__image {
@@ -34,6 +47,18 @@
       width: 670px;
       padding-bottom: 0;
     }
+
+    &--full-screen {
+      position: relative;
+      left: -20px;
+      width: 100vw;
+      z-index: 0;
+
+      // @include onDesktop() {
+      //   width: calc(100% - 40px);
+      //   left: 0;
+      // }
+    }
   }
 
   &__content {
@@ -43,6 +68,18 @@
 
     @include onTablet() {
       gap: 15px;
+    }
+
+    &--highlighted-event {
+      position: relative;
+      top: -100px;
+      z-index: 1;
+      gap: 20px;
+      max-width: 570px;
+      margin: 0 auto;
+      padding-bottom: 20px;
+      background-color: #fff;
+      box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
     }
   }
 
@@ -54,6 +91,12 @@
       justify-content: flex-start;
       gap: 15px;
       padding-bottom: 15px;
+    }
+
+    &--highlighted-event {
+      width: 250px;
+      margin: 0 auto;
+      padding: 20px 0 0;
     }
   }
 
@@ -85,6 +128,19 @@
       height: 10px;
       background-color: $aftel-elements-color;
       margin-left: 15px;
+    }
+
+    &--highlighted-event {
+      text-align: center;
+      justify-content: center;
+
+      &::after {
+        display: none;
+      }
+
+      @include onTabletAndDesktop() {
+        text-align: left;
+      }
     }
   }
 
