--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -79,7 +79,7 @@
       margin: 0 auto;
       padding-bottom: 20px;
       background-color: #fff;
-      box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     }
   }
 
