header for museum almost created

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/main.scss";
+@import "./blocks/button.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./utils/recet";
+@import "./utils/mixins";
+@import "./utils/variables";
