fix my style code

--- a/src/styles/blocks/_current-events.scss
+++ b/src/styles/blocks/_current-events.scss
@@ -26,7 +26,7 @@
     width: 280px;
     height: 210px;
     margin-bottom: 20px;
-    transition: all 0.3s ease;
+    transition: transform $transitionDuration ease;
 
     &:hover {
       transform: scale(1.05);
@@ -62,16 +62,16 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    font-family: "IBM", sans-serif;
 
     @include onTablet {
       margin-bottom: 30px;
     }
 
     &--left {
-      font-family: "IBM", sans-serif;
       font-weight: 500;
       font-size: 16px;
-      color: #687480;
+      color: $gray;
       text-transform: uppercase;
 
       @include onTablet {
@@ -80,11 +80,10 @@
     }
 
     &--right {
-      font-family: "IBM", sans-serif;
       font-weight: 700;
       font-size: 16px;
       line-height: 24px;
-      color: #1a5a4c;
+      color: $background;
 
       @include onTablet {
         font-size: 14px;
@@ -97,18 +96,18 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+
     &--text {
       font-family: "Montserat", sans-serif;
       font-size: 28px;
-      font-weight: 400;
-      color: #0f0e08;
+      color: $text;
     }
 
     &--squere {
       margin-left: 15px;
       width: 10px;
       height: 10px;
-      background-color: #f14a27;
+      background-color: $orange;
 
       @include onTablet {
         width: 15px;
@@ -127,7 +126,7 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
-    color: #4e4e4e;
+    color: $subtext;
     width: 280px;
 
     @include onTablet {
