--- a/src/styles/blocks/_follow.scss
+++ b/src/styles/blocks/_follow.scss
@@ -31,7 +31,7 @@
 
   &__subtitle {
     font-family: "IBM", sans-serif;
-    color: #fff;
+    color: $white;
     font-size: 18px;
     line-height: 27px;
     text-align: center;
@@ -63,7 +63,7 @@
 
       &:focus {
         outline: none;
-        border: 1px solid #f14a27;
+        border: 1px solid $orange;
       }
 
       &::placeholder {
@@ -75,15 +75,15 @@
 
     &--btn {
       cursor: pointer;
-      border: 1px solid #f14a27;
+      border: 1px solid $orange;
       width: 50px;
       height: 50px;
-      background-color: #f14a27;
+      background-color: $orange;
       background-image: url(../images/for__input.png);
       background-size: 8px 12px;
       background-repeat: no-repeat;
       background-position: center;
-      transition: all 0.3s;
+      transition: all $transitionDuration;
 
       @include onTablet {
         height: 70px;
