--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -44,7 +44,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url(../images/Facebook.png);
-    transition: all 0.5s ease;
+    transition: background-image $transitionDuration ease;
 
     &:hover {
       background-image: url(../images/facebook-hover.png);
@@ -54,7 +54,7 @@
   &__icon--instagram {
     margin-left: 20px;
     background-image: url(../images/instagram.png);
-    transition: all 0.5s ease;
+    transition: background-image $transitionDuration ease;
 
     &:hover {
       background-image: url(../images/instagram-hover.png);
@@ -76,7 +76,7 @@
       font-family: "IBM", sans-serif;
       font-size: 14px;
       font-weight: 400;
-      color: #0f0e08;
+      color: $text;
       margin-bottom: 20px;
     }
 
@@ -90,7 +90,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-    color: #0f0e08;
+    color: $text;
 
     &--sunday {
       margin-bottom: 20px;
@@ -105,7 +105,7 @@
     font-family: "IBM", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    color: #0f0e08;
+    color: $text;
   }
 
   &__contact--title {
@@ -114,7 +114,7 @@
 
   &__contact--adress {
     display: block;
-    color: #0f0e08;
+    color: $text;
     text-decoration: none;
     transition: all 0.5s ease;
 
@@ -126,9 +126,9 @@
 
   &__contact--tel {
     display: block;
-    color: #0f0e08;
+    color: $text;
     text-decoration: none;
-    transition: all 0.5s ease;
+    transition: color $transitionDuration ease, font-weight $transitionDuration ease;
 
     &:hover {
       color: $background;
@@ -138,7 +138,7 @@
 
   &__contact--fax {
     display: block;
-    color: #0f0e08;
+    color: $text;
     text-decoration: none;
     transition: all 0.5s ease;
 
@@ -150,9 +150,9 @@
 
   &__contact--email {
     display: block;
-    color: #0f0e08;
+    color: $text;
     text-decoration: none;
-    transition: all 0.5s ease;
+    transition: color $transitionDuration ease, font-weight $transitionDuration ease;
 
     &:hover {
       color: $background;
@@ -187,9 +187,9 @@
     font-family: "IBM", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    color: #0f0e08;
+    color: $text;
     text-decoration: none;
-    transition: all 0.5s ease;
+    transition: color $transitionDuration ease, font-weight $transitionDuration ease;
 
     &:nth-child(-n + 2) {
       margin-bottom: 20px;
@@ -217,7 +217,7 @@
     font-family: "IBM", sans-serif;
     font-weight: 300;
     font-size: 12px;
-    color: #0f0e08;
+    color: $text;
 
     @include onTablet {
       flex-direction: row;
