--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -20,7 +20,7 @@
   &__slide-second {
     width: 770px;
     height: 600px;
-    transition: all 0.3s ease;
+    transition: transform $transitionDuration ease;
 
     &:hover {
       transform: scale(1.05);
@@ -30,7 +30,7 @@
   &__slide-threeth {
     width: 770px;
     height: 360px;
-    transition: all 0.3s ease;
+    transition: transform $transitionDuration ease;
 
     &:hover {
       transform: scale(1.05);
@@ -40,7 +40,7 @@
   &__slide-fourth {
     width: 370px;
     height: 360px;
-    transition: all 0.3s ease;
+    transition: transform $transitionDuration ease;
 
     &:hover {
       transform: scale(1.05);
