--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -32,7 +32,7 @@
     font-size: 45px;
     font-family: "Montserat", sans-serif;
     font-weight: 700;
-    color: #000;
+    color: $text;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 20px;
