--- a/src/styles/blocks/_lecture.scss
+++ b/src/styles/blocks/_lecture.scss
@@ -23,7 +23,7 @@
     padding: 20px 0;
     width: 280px;
     height: 140px;
-    background: #fff;
+    background: $white;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
@@ -54,7 +54,7 @@
     font-family: "IBM", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: #687480;
+    color: $gray;
     text-transform: uppercase;
 
     @include onTablet {
@@ -67,7 +67,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 24px;
-    color: #1a5a4c;
+    color: $background;
 
     @include onTablet {
       font-size: 14px;
@@ -80,7 +80,7 @@
     font-family: "Montserat", sans-serif;
     font-size: 28px;
     font-weight: 400;
-    color: #0f0e08;
+    color: $text;
 
     @include onTablet {
       font-size: 36px;
