--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -21,7 +21,7 @@
     right: 0;
     left: 0;
     top: 0;
-    transition: all 0.5s;
+    transition: transform $transitionDuration;
     transform: translateX(-100%);
 
     &:target {
