--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -2,7 +2,7 @@
   font-family: "Montserat", sans-serif;
   font-weight: 700;
   font-size: 36px;
-  color: #0f0e08;
+  color: $text;
   width: 280px;
   text-align: center;
   margin-bottom: 40px;
