--- a/src/styles/blocks/_top-action.scss
+++ b/src/styles/blocks/_top-action.scss
@@ -12,7 +12,7 @@
     background-size: cover;
     position: relative;
     top: 24px;
-    transition: all 0.3s ease;
+    transition: background-image $transitionDuration ease;
 
     &:hover {
       background-image: url(../images/menu_hover.svg);
