--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,3 +2,7 @@ $background:  #1a5a4c;
 $orange: #f14a27;
 $text: #0f0e08;
 $subtext: #4e4e4e;
+$gray: #687480;
+$transitionDuration: 0.3s;
+$white: #fff;
+$black: #000;
