--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   background-color: rgba(100, 100, 100, 0.5);
-  color: #fff;
+  color: $white;
 
   &__container {
     display: flex;
@@ -88,9 +88,9 @@
   }
 
   &__link {
-    color: #fff;
+    color: $white;
     text-decoration: none;
-    transition: all 0.3s ease;
+    transition: color $transitionDuration ease;
 
     &:hover {
       color: $orange;
@@ -128,7 +128,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    transition: all 0.3s ease;
+    transition: background-image $transitionDuration ease;
 
     &:hover {
       background-image: url(../images/cross-hover.svg);
