--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,7 +5,7 @@
   height: 50px;
   width: 280px;
   border: 1px solid $background;
-  transition: all 0.5s;
+  transition: all $transitionDuration;
 
   @include onTablet {
     width: 270px;
@@ -38,7 +38,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 7.5px 12px;
-    transition: all 0.5s;
+    transition: all $transitionDuration;
 
     @include onTablet {
       width: 70px;
