--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -71,7 +71,7 @@
     }
 
     @include onDesktop() {
-      width: 170px;
+      width: 175px;
     }
   }
 
@@ -82,8 +82,14 @@
 
   &__open-hours,
   &__days-off,
-  &__adress {
+  &__contact {
     line-height: 150%;
+    color: $accent-text-color;
+  }
+
+  &__contact:hover {
+    color: $green-color;
+    font-weight: 500;
   }
 
   &__time {
@@ -148,6 +154,7 @@
   &__links-container {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 20px;
 
     @include onTablet() {
@@ -157,6 +164,13 @@
 
   &__nav-link {
     color: $accent-text-color;
+    padding-bottom: 5px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom $transition-timing ease-in-out;
+
+    &:hover {
+      border-bottom: 1px solid $accent-text-color;
+    }
   }
 
   &__copyrights-block {
