--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -14,15 +14,24 @@
     display: flex;
     justify-content: space-between;
     gap: 30px;
+    height: 100%;
   }
 
   &__long-photo {
     width: 33.33%;
-    height: 100%;
+    transition: transform $transition-timing ease-in-out;
+
+    &:hover {
+      @extend %hover-increase;
+    }
   }
 
   &__broad-photo {
     width: 66.66%;
-    height: 100%;
+    transition: transform $transition-timing ease-in-out;
+
+    &:hover {
+      @extend %hover-increase;
+    }
   }
 }
