--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -13,6 +13,11 @@ $tablet-desktop-link: 72px;
   @include onTabletAndDesktop() {
     max-width: 270px;
     height: $tablet-desktop-link;
+    transition: background-color 0.3s ease-in-out;
+  }
+
+  &:hover {
+    background-color: $green-color;
   }
 
   &__title {
@@ -24,10 +29,15 @@ $tablet-desktop-link: 72px;
     font-family: "IBM Plex Sans", serif;
     font-weight: 500;
     color: $accent-text-color;
+    transition: color 0.3s ease-in-out;
 
     @include onTabletAndDesktop() {
       height: $tablet-desktop-link;
     }
+  }
+
+  &:hover .link__title {
+    color: $text-on-dark;
   }
 
   &__button {
