--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -1,6 +1,14 @@
 .section {
   padding-bottom: 100px;
 
+  @include onTablet() {
+    padding-bottom: 88px;
+  }
+
+  @include onDesktop() {
+    padding-bottom: 200px;
+  }
+
   &:last-of-type {
     padding-bottom: 0;
   }
