--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,6 +5,8 @@ $green-color: #1a5a4c;
 $events-type-color: #687480;
 $text-description-color: #4e4e4e;
 $aftel-elements-color: #f14a27;
+$send-form-color: #c92704;
 $text-on-dark: #fff;
 $logo-size: 30px;
 $link-height: 52px;
+$transition-timing: 0.3s;
