--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,8 @@
 @import "./blocks/subscribe.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/top-action.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/timetable.scss";
 
 body {
   background: #fff;
