--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,12 +15,21 @@
     top: 0;
     left: 0;
     right: 0;
-
+    z-index: 1;
     transform: translateX(-100%);
     transition: transform 0.3s;
 
     &:target {
       transform: translateY(0);
+
+      &::after {
+        content: "";
+        left: 0;
+        right: 0;
+        position: absolute;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     }
   }
 }
