--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     z-index: 1;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     transition: transform 0.3s;
 
     &:target {
