slider section was added

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,7 @@
   font-family: "IBM Plex Sans", sans-serif;
   scrollbar-width: none;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body--with-menu {
     overflow: hidden;
