--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,5 +15,7 @@
 
 @import "./blocks/current-events.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/footer.scss";
